# Data-Structure-assignments

./: README.md
task1-dynamic-memory-allocation-dina-khalid/: CMakeLists.txt  MyArray.h  README.md  main.cpp
task1-dynamic-memory-allocation-dina-khalid/nbproject/: configurations.xml  project.xml
task1-dynamic-memory-allocation-dina-khalid/nbproject/private/: Default.properties  configurations.xml  private.xml
task2-codeforces-contests-dina-khalid/: A.cpp  B.cpp  LessOrEqual.cpp  README.md  Submission.md  TwoGram.cpp  WrongSubtraction.cpp
task3-const-and-report-dina-khalid/: README.md  Task3.md
task4-bst-dina-khalid/: README.md  my_tree.cpp  my_tree.h
